--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "service-worker.js",
   "scripts": {
-  "start": "live-server --no-browser --watch --no-cache"
+  "start": "live-server "
 },
   "dependencies": {},
   "author": "",
