--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "MelodyTunes",
-  "short_name": "MelodyTunes",
+  "name": "MusicsAura",
+  "short_name": "MusicsAura",
   "description": "Stream Hindi, Punjabi, Haryanvi & Bhojpuri music with seamless background playback",
   "start_url": "/",
   "scope": "/",
